# LearningVulkan

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  Dependencies.lua  README.md  premake5.lua
VulkanApp/: CMakeLists.txt  imgui.ini  premake5.lua
VulkanApp/res/models/: viking_room.glb
VulkanApp/res/shaders/: FragmentShader.frag  VertexShader.vert  vert.spv
VulkanApp/src/: Camera.cpp  Camera.h  Input.cpp  Input.h  Main.cpp
res/shaders/: FragmentShader.frag  VertexShader.vert  vert.spv
scripts/: CompileShaders.bat  Linux-Setup.sh  README.md  Win-Setup.bat
